# ESP32-c6

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml
docs/: DEVELOPMENT.md  GAP_ANALYSIS.md  RBMS-DEV-001_roadmap.md  RBMS-HW-001_hardware.md  RBMS-SPEC-001_spec.md  README.md
firmware/: CMakeLists.txt  Kconfig  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.type_a
firmware/components/actuator/: CMakeLists.txt  pwm_dimmer.c  ssr.c
firmware/components/comm/: CMakeLists.txt  cbor_codec.c  ota_update.c  thread_node.c
firmware/components/config/: CMakeLists.txt  nvs_config.c  (+1 more)
firmware/main/: CMakeLists.txt  app_main.c  app_type_a.c  app_type_b.c
hardware/: README.md
hardware/reference/: bom.md  design_notes.md  pinout.md
presets/: ball_python.json  corn_snake.json  crested_gecko.json  leopard_gecko.json
server/border-router/: README.md  setup_otbr.sh
server/bridge/: TLS_SETUP.md  mqtt_influx_bridge.py  requirements.txt
server/gateway/: requirements.txt  thread_mqtt_gateway.py
server/mosquitto/: acl.conf  mosquitto.conf
server/scripts/: setup.sh
server/systemd/: rbms-bridge.service  rbms-gateway.service
test/: Makefile  test_adaptive_poll.c  test_cbor_codec.c  test_pid.c
test/mocks/: esp_err.h  esp_log.h
test/unity/: unity.c  unity.h
tools/: README.md  auto.ps1  build.ps1  build_firmware.bat  build_type_a.bat  check_ports.ps1  env.ps1  flash.ps1  install_idf.bat  monitor.py  setup_esp_idf.ps1  validate.py
(+30 files in other folders)
